# sui_wallet_cli

./: .env.example  Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs
src/commands/: balance.rs  cipher.rs  create.rs  edit.rs  export.rs  faucet.rs  import.rs  list.rs  mod.rs  rpc.rs  tag.rs
src/models/: alias.rs  alias_or_address.rs  alias_or_url.rs  cipher.rs  cipher_key.rs  cipher_nonce.rs  coin_object.rs  coin_object_list.rs  mod.rs  network_env.rs  rpc_server.rs  rpc_server_list.rs  rpc_url.rs  tag.rs  tag_list.rs  wallet.rs  wallet_confy.rs  wallet_credential.rs  wallet_list.rs
src/services/: cipher_service.rs  mod.rs  rpc_service.rs  tag_service.rs  transaction_service.rs  wallet_service.rs
src/storages/: confy.rs  mod.rs
src/views/: coin_view.rs  mod.rs  rpc_server_view.rs  tag_view.rs  wallet_view.rs
