[package]
name = "sui_wallet"
version = "0.1.0"
edition = "2021"
description = "SUI Wallet CLI"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
envy = "0.4.2"
thiserror = "2.0.7"
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui_keys = { git = "https://github.com/MystenLabs/sui", package = "sui-keys" }
sui_json_rpc_types = { git = "https://github.com/MystenLabs/sui", package = "sui-json-rpc-types" }
shared_crypto = { git = "https://github.com/MystenLabs/sui", package = "shared-crypto" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
hex = "0.4.3"
tiny-bip39 = "2.0.0"
eyre = "0.6.12"
prettytable-rs = "0.10.0"
confy = { version = "0.6.1", features = [
  "yaml_conf",
], default-features = false }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.9"
url = "2.5.4"
tokio = "1.42.0"
reqwest = "0.12.11"
